--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,6 +10,8 @@ jobs:
       - uses: php-actions/composer@v6
       - name: PHPStan Static Analysis
         uses: php-actions/phpstan@v3
+      - name: PHPUnit Tests
+        run: ./vendor/bin/phpunit tests --do-not-cache-result
   semrel:
     runs-on: ubuntu-latest
     steps:
