--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "phpstan/phpstan": "^1.9"
   },
   "require": {
-    "php": "^8.1"
+    "php": "^8.1",
+    "psr/log": "^1.0.1 || ^2.0 || ^3.0"
   }
 }
