--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
   },
   "require": {
     "php": "^8.1",
-    "psr/log": "^1.0.1 || ^2.0 || ^3.0"
+    "psr/log": "^1.0.1 || ^2.0 || ^3.0",
+    "byteshard/exception": "^1.1"
   }
 }
