--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,7 +3,7 @@ name: CI
 on: [push]
 
 jobs:
-  phpstan:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -14,6 +14,8 @@ jobs:
         run: ./vendor/bin/phpunit tests --do-not-cache-result
   semrel:
     runs-on: ubuntu-latest
+    needs: tests
+    if: github.ref == 'refs/heads/main'
     steps:
       - uses: byteshard/templates/semrel@main
         with:
